// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default Figure-content--warning"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default Figure-content--negative"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default Figure-content--warning"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default Figure-content--warning"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default Figure-content--negative"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default Figure-content--warning"
>
  <span
    className="Figure-total"
  >
    -100.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    4.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    100.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="default Figure-content--positive"
>
  <span
    className="Figure-total"
  >
    500.00
  </span>
</div>
`;
